# bolt-and-nut

./: README.md
models/: nanomodel.pt
ncnn/Yolo-FastestV2/: anchors6.txt  reqs.txt  train.py
ncnn/Yolo-FastestV2/data/: boltnut.data  coco.data
ncnn/Yolo-FastestV2/utils/: datasets.py  datasets2.py
ncnn/ncnn_cpp_infer/: CMakeLists.txt  config.json  demo.cpp  hungarian.cpp  hungarian.h  json.hpp  jsonConfig.cpp  jsonConfig.hpp  kalmanTracker.cpp  kalmanTracker.h  lasttrain210-sim-opt.param  mainFV2.cpp  result.h264  track.hpp  yolo-fastestv2.cpp  yolo-fastestv2.h
ncnn/weights/: boltnut-120-epoch-0.968096ap-model.pth  boltnut-350-epoch-0.957257ap-model.pth  boltnut-40-epoch-0.970133ap-model.pth  boltnut.onnx
results/: Jetson_Nano_NCNN_Result.h264  result.h264
yolov5train/: dataset_bolt.yaml  detect.py  val.py
yolov5train/data/hyps/: exp14_new_hyp.yaml  exp15.yaml  exp17.yaml  hyp.scratch-high.yaml  nano.yaml  newhyps.yaml
yolov5train/runs/first_train/: events.out.tfevents.1675199912.berkay.14920.0  opt.yaml  results.csv
yolov5train/runs/nano_train/: events.out.tfevents.1675410017.berkay.26812.0  opt.yaml  results.csv
yolov5train/runs/second_train/: events.out.tfevents.1675274506.berkay.26016.0  hyp.yaml  opt.yaml  results.csv
yolov5train/runs/third_train/: events.out.tfevents.1675606608.berkay.18311.0  hyp.yaml  opt.yaml  results.csv
yolov5train/utils/: torch_utils.py
yolov5trt/: CMakeLists.txt  result.h264  yolov5.cpp
yolov5trt/plugin/: yololayer.h
yolov5trt/src/: Hungarian.cpp  Hungarian.h  KalmanTracker.cpp  KalmanTracker.h  config.json  json.hpp  jsonConfig.cpp  jsonConfig.hpp  track.hpp
